--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_svg:  # display svg vectors
   flutter:
     sdk: flutter
+  redis: ^4.0.0
+  split_view: ^3.2.1
 dev_dependencies:
   mockito:
   flutter_lints:
